--- a/CrudWithJQueryDatatable/Views/Home/ResetPassword.cshtml
+++ b/CrudWithJQueryDatatable/Views/Home/ResetPassword.cshtml
@@ -40,6 +40,11 @@
                     <td></td>
                     <td> <input type="submit" value="Submit" class="btn btn-default" /></td>
                 </tr>
+                <tr>
+                    <td>
+                    <p>Back to @Html.ActionLink("Login", "Login", "Home") page</p>
+                    </td>
+                </tr>
             </table>
         </div>
     </body>
