--- a/CrudWithJQueryDatatable/Views/Shared/_Layout.cshtml
+++ b/CrudWithJQueryDatatable/Views/Shared/_Layout.cshtml
@@ -55,13 +55,13 @@
                         <a href="@Url.Action("profile","Home")">@HttpContext.Current.User.Identity.Name Profile</a>
                     </li>
                     <li>
-                        <a href="#">@Html.ActionLink("Change Password", "changePassword", "Home") </a>
+                    <li><a href="~/Home/changePassword">Change Password</a></li>
                     </li>
                     <li>
-                        <a href="#" data-toggle="modal" data-target="#exampleModalCenter" data-url="/Home/ProfilePicture" data-type='file'> UpDate Profile</a>
+                        <a href="#" data-toggle="modal" data-target="#exampleModalCenter" data-url="/Home/ProfilePicture" data-type='file'> Update Profile Picture</a>
                     </li>
                     <li>
-                        <a href="#">@Html.ActionLink("LogOff", "LogOff", "Home")</a>
+                        <a href="~/Home/LogOff">LogOff</a>
                     </li>
                 </ul>
 
@@ -85,27 +85,27 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Home</a>
+                                <a class="nav-link" href="~/Employee/Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="~/Home/profile">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Portfolio</a>
+                                <a class="nav-link" href="~/Home/GetUser">Roles</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" style="margin-right: 500px;" href="#">Contact</a>
                             </li>
                             <li class="nav-item">
                                 <div class="nav-link">
-                                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                                    <button class="btn btn-primary " type="button" style="width: auto; text-align: center; " data-toggle="dropdown">
                                         Welcome @HttpContext.Current.User.Identity.Name <img src="@Url.Content(customClaims.ProfilePic(User))" alt="" style="border-radius: 50%;" height=30 width=30 />
-                                        @*<span class="caret"></span>*@
+                                                                                        <i class="fa fa-caret-down"></i>
                                     </button>
                                     <ul class="dropdown-menu">
-                                        <li><a href="#">@Html.ActionLink("View Profile", "profile", "Home")</a></li>
-                                        <li><a href="">@Html.ActionLink("Change Password", "changePassword", "Home")</a></li>
-                                        <li><a href="#">@Html.ActionLink("LogOff", "LogOff", "Home")</a></li>
+                                        <li  style="display: block;"><a href="~/Home/profile">View Profile</a></li>
+                                        <li style="display: block;"><a href="~/Home/changePassword">Change Password</a></li>
+                                        <li style="display: block;"><a href="~/Home/LogOff">LogOff</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -113,8 +113,6 @@
                     </div>
                 </div>
             </nav>
-
-            <h2 class="mb-4">Employee Details</h2>
 
             <div class="body-content">
                 @RenderBody()
