--- a/CrudWithJQueryDatatable/Views/Home/profile.cshtml
+++ b/CrudWithJQueryDatatable/Views/Home/profile.cshtml
@@ -1,6 +1,8 @@
-﻿@{
-    Layout = null;
+﻿
+@{
+    ViewBag.Title = "profile";
 }
+
 
 <!DOCTYPE html>
 
@@ -16,23 +18,13 @@
     <div width="100%">
         <section style="background-color: #eee;">
             <div class="container py-5">
-                <div class="row">
-                    <div class="col">
-                        <nav aria-label="breadcrumb" class="bg-light rounded-3 p-3 mb-4">
-                            <ol class="breadcrumb mb-0">
-                                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">User Profile</li>
-                            </ol>
-                        </nav>
-                    </div>
-                </div>
+                
 
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="card mb-4">
                             <div class="card-body text-center">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
-                                     class="rounded-circle img-fluid" style="width: 150px;">
+                                <img src="@Url.Content(customClaims.ProfilePic(User))" alt="" class="rounded-circle img-fluid" style="width: 150px;">
                                 <h5 class="my-3">@HttpContext.Current.User.Identity.Name</h5>
                                 <p class="text-muted mb-1">Full Stack Developer</p>
                                 <p class="text-muted mb-4">Islamabad, Pakistan</p>
@@ -86,7 +78,7 @@
                                         <p class="mb-0">Email</p>
                                     </div>
                                     <div class="col-sm-9">
-                                        <p class="text-muted mb-0">example@example.com</p>
+                                        <p class="text-muted mb-0">@Url.Content(customClaims.email(User))</p>
                                     </div>
                                 </div>
                                 <hr>
@@ -195,3 +187,4 @@
     </div>
 </body>
 </html>
+
