--- a/CrudWithJQueryDatatable/Views/Role/CreateNewRole.cshtml
+++ b/CrudWithJQueryDatatable/Views/Role/CreateNewRole.cshtml
@@ -4,8 +4,7 @@
     Layout = null;
 }
 
-
-<form action="@Url.Content("~/Home/CreateNewRole")" id="myform" method="post">
+<form action="@Url.Content("~/Role/CreateNewRole")" id="myform" method="post">
 
     <div class="form-horizontal">
         <h4>Add New Role</h4>
@@ -28,8 +27,6 @@
         </div>
     </div>
 </form>
-
-
 
 <script>
     $("#myform").validate({
