--- a/CrudWithJQueryDatatable/Views/Role/EditUser.cshtml
+++ b/CrudWithJQueryDatatable/Views/Role/EditUser.cshtml
@@ -4,7 +4,7 @@
     Layout = null;
 }
 
-<form action="@Url.Content("~/Home/EditUser")" id="myform" method="post">
+<form action="@Url.Content("~/Role/EditUser")" id="myform" method="post">
     <div class="form-horizontal">
         <h4>Edit User Role</h4>
         <hr />
@@ -16,12 +16,12 @@
 
             @foreach (var item in Model)
             {
-                Html.RenderPartial("_UserRoleListPartial", item);<br />
+                Html.RenderPartial("_UserListPartial", item);<br />
             }
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <!--<input type="submit" class="btn btn-primary" value="Create"--> @*class="btn btn-default"*@ <!--/>-->
+                <!--<input type="submit" class="btn btn-primary" value="Create"--> @*class="btn btn-default"*@ <!-- />-->
                 <input type="submit" value="Create" class="btn btn-success" />
                 <button type="submit" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                 @* <button type="submit" class="btn btn-success" data-dismiss="modal">Create</button>*@
@@ -29,4 +29,3 @@
         </div>
     </div>
 </form>
-
