--- a/CrudWithJQueryDatatable/Views/Shared/_Layout.cshtml
+++ b/CrudWithJQueryDatatable/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                     <li><a href="~/Home/changePassword">Change Password</a></li>
                     </li>
                     <li>
-                        <a href="#" data-toggle="modal" data-target="#exampleModalCenter" data-url="/Home/ProfilePicture" data-type='file'> Update Profile Picture</a>
+                        <a href="~/Home/ProfilePicture" data-toggle="modal" data-target="#exampleModalCenter" data-url="/Home/ProfilePicture" data-type='file'> Update Profile Picture</a>
                     </li>
                     <li>
                         <a href="~/Home/LogOff">LogOff</a>
