--- a/CrudWithJQueryDatatable/Views/Home/changePassword.cshtml
+++ b/CrudWithJQueryDatatable/Views/Home/changePassword.cshtml
@@ -2,51 +2,83 @@
 @{
     Layout = null;
 }
-@using (Html.BeginForm("changePassword", "Home", FormMethod.Post))
-{
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <link href="~/Content/login.css" rel="stylesheet" />
-    <title>Change Password</title>
-</head>
-<body>
-    <div class="login">
-        <h1>Change Password</h1>
-        <table>
-            <tr>
-                <td>@Html.LabelFor(a => a.password)</td>
-                <td>@Html.PasswordFor(a => a.password)</td>
-                <td>@Html.ValidationMessageFor(a => a.password)</td>
-            </tr>
-            <tr>
-                <td>
-                    @Html.LabelFor(a => a.Newpassword)
-                </td>
-                <td>
-                    @Html.PasswordFor(a => a.Newpassword)
-                </td>
-                <td>
-                    @Html.ValidationMessageFor(a => a.Newpassword)
-                </td>
-            </tr>
-            <tr>
-                <td>@Html.LabelFor(a => a.confirmpassword)</td>
-                <td>@Html.PasswordFor(a => a.confirmpassword)</td>
-                <td>@Html.ValidationMessageFor(a => a.confirmpassword)</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>
-                    <input type="submit" value="Change Password" />
-                </td>
-                <td></td>
-            </tr>
-        </table>
+<form action="@Url.Content("~/Home/changePassword")" id="myform" method="post">
+    <h3>Change Password</h3>
+    <div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.password, new { @class = "control-label" })
+            @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control", @id = "Position" } })
+            @Html.ValidationMessageFor(model => model.password)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Newpassword, new { @class = "control-label" })
+            @Html.EditorFor(model => model.Newpassword, new { htmlAttributes = new { @class = "form-control", @id = "Position" } })
+            @Html.ValidationMessageFor(model => model.Newpassword)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.confirmpassword, new { @class = "control-label" })
+            @Html.EditorFor(model => model.confirmpassword, new { htmlAttributes = new { @class = "form-control", @id = "Position" } })
+            @Html.ValidationMessageFor(model => model.confirmpassword)
+        </div>
     </div>
-</body>
-</html>
-}
+    <div class="modal-footer" style="text-align: center;">
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+    </div>
+</form>
+
+@*if you want to change view from popup modal to next page then use this view
+
+    @model CrudWithJQueryDatatable.viewModel.changePassword
+    @{
+        Layout = null;
+    }
+    @using (Html.BeginForm("changePassword", "Home", FormMethod.Post))
+    {
+
+        <!DOCTYPE html>
+
+        <html>
+        <head>
+            <meta name="viewport" content="width=device-width" />
+            <link href="~/Content/login.css" rel="stylesheet" />
+            <title>Change Password</title>
+        </head>
+        <body>
+            <div class="login">
+                <h1>Change Password</h1>
+                <table>
+                    <tr>
+                        <td>@Html.LabelFor(a => a.password)</td>
+                        <td>@Html.PasswordFor(a => a.password)</td>
+                        <td>@Html.ValidationMessageFor(a => a.password)</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            @Html.LabelFor(a => a.Newpassword)
+                        </td>
+                        <td>
+                            @Html.PasswordFor(a => a.Newpassword)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(a => a.Newpassword)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>@Html.LabelFor(a => a.confirmpassword)</td>
+                        <td>@Html.PasswordFor(a => a.confirmpassword)</td>
+                        <td>@Html.ValidationMessageFor(a => a.confirmpassword)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>
+                            <input type="submit" value="Change Password" />
+                        </td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
+        </body>
+    </html>
+    }*@
