--- a/CrudWithJQueryDatatable/Views/Shared/_Layout.cshtml
+++ b/CrudWithJQueryDatatable/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                         <a href="@Url.Action("profile","Home")">@HttpContext.Current.User.Identity.Name Profile</a>
                     </li>
                     <li>
-                    <li><a href="~/Home/changePassword">Change Password</a></li>
+                        <a href="~/Home/changePassword" data-toggle="modal" data-target="#exampleModalCenter" data-url="/Home/changePassword" data-type='file'>Change Password</a>
                     </li>
                     <li>
                         <a href="~/Home/ProfilePicture" data-toggle="modal" data-target="#exampleModalCenter" data-url="/Home/ProfilePicture" data-type='file'> Update Profile Picture</a>
@@ -94,10 +94,10 @@
                                 <a class="nav-link" href="~/Role/Index">User Details</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" style="margin-right: 500px;" href="#">Contact</a>
+                                <a class="nav-link" style="margin-right: 500px;" href="">Contact</a>
                             </li>
-                            <li class="nav-item"  >
-                                <div class="nav-link" >
+                            <li class="nav-item">
+                                <div class="nav-link">
                                     <button class="btn btn-primary " type="button" style="width: auto; text-align: center; " data-toggle="dropdown">
                                         Welcome @HttpContext.Current.User.Identity.Name <img src="@Url.Content(customClaims.ProfilePic(User))" alt="" style="border-radius: 50%;" height=30 width=30 />
                                         <i class="fa fa-caret-down"></i>
